@@ -1,7 +1,16 @@
 rootskel (1.11) UNRELEASED; urgency=low
 
+  NOTE: not for sarge, needs base-installer 1.14.
   * Colin Watson
     - Remove hardcoded path to debconf-loadtemplate.
+  * Joey Hess
+    - Move templates to base-installer that are only used by base-installer
+      and frequently need updated, so are best not put on d-i initrds:
+      debian-installer/kernel/image, debian-installer/kernel/image-2.6,
+      debian-installer/kernel/linux/initrd,
+      debian-installer/kernel/linux/initrd-2.6.
+      Did not move a few others that are used by more packages than just
+      base-installer.
 
  -- Colin Watson <cjwatson@debian.org>  Mon,  6 Dec 2004 11:05:00 +0000
 
